# athenapk

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  ascent_actions.yaml  ascent_options.json  athenapk_1node.submit  growth_vs_time.ipynb  heating.ipynb  histogram.ipynb  plot_ascent_profiles.py  plot_precipitator.ipynb  plot_profiles.py  profiles.ipynb  replay_actions.yaml  reproducer.sh  reproducer0.sh  reproducer1.sh  turb_heating.ipynb  turb_heating_alpha_0.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
.spack-env/: compilers.yaml  config.yaml  packages.yaml
cmake/: Format.cmake
docs/: README.md  chicoma.md  cluster.md  cooling_notes.md  development.md  input.md  pgen.md  plot_lambda.py  schure_table_2.txt  sources.md  turbulence.md  units.md
docs/cooling/: cooling.ipynb  gnat_sternberg_cie_table.txt  plot_lambda.py  schure_table_4.txt  sutherland_dopita_table_6.txt
inputs/: 2021.pbm  SN.in  SN2.in  advection_3d.in  ascent_actions.yaml  ascent_broken_on_gpu.yaml  ascent_data_binning.yaml  ascent_working_on_gpu.yaml  athena.pbm  blast_3d_amr.in  blast_3d_static.in  blast_image.in  cloud.in  cloud_lowres.in  cpaw.in  diffusion.in  disk_cyl.in  disk_sph.in  exacb_turbulence.in  field_loop.in  generate_fmturb_modes.py  gtc.pbm  hummel2.in  iaus.pbm  kh-shear-lecoanet_2d.in  linear_wave1d.in  linear_wave3d.in  lw_implode.in  orszag_tang.in  parthenon.pbm  parthenon_athena.pbm  precipitator.cooling  precipitator.in  precipitator_ascent_actions.yaml  precipitator_ascent_broken.yaml  precipitator_ascent_simple.yaml  precipitator_lowres.in  precipitator_lowres_nocool.in  precipitator_lowres_noheat.in  precipitator_lowres_noperturb.in  (+30 more)
inputs/cluster/: agn_triggering.in  cluster.in  cooling.in  generate_cluster_input.ipynb  gnat-sternberg.cooling  hse.in  hse.input  hydro_agn_feedback.in  magnetic_tower.in  magnetic_tower_unigrid.in  my_cluster.input
inputs/cooling_tables/: Visu.ipynb  gnat-sternberg.cooling_0.001Z  gnat-sternberg.cooling_0.01Z  gnat-sternberg.cooling_0.1Z  gnat-sternberg.cooling_1Z  gnat-sternberg.cooling_2Z  schure.cooling  schure.cooling_0.3Z  schure.cooling_0.5Z  schure.cooling_1.0Z  sutherland_dopita.cooling  updated_schure.cooling
scripts/: plot_particles.py  write_bp.py
src/: CMakeLists.txt  bc.cpp  bc.hpp  gauss.hpp  interp.hpp  main.cpp  main.hpp  physical_constants.hpp  profile.hpp  reduction_utils.hpp  render_ascent.cpp  render_ascent.hpp  units.hpp
src/bvals/: boundary_conditions_apk.hpp
src/eos/: adiabatic_glmmhd.cpp  adiabatic_glmmhd.hpp  adiabatic_hydro.cpp  adiabatic_hydro.hpp  eos.hpp
src/hydro/: .hydro.cpp.swp  hydro.cpp  hydro.hpp  hydro_driver.cpp  hydro_driver.hpp  just_calc_fluxes.cpp
src/hydro/diffusion/: conduction.cpp  diffusion.cpp  diffusion.hpp  resistivity.cpp  viscosity.cpp
src/hydro/glmmhd/: cleaning_speed.cpp  dedner_source.cpp  glmmhd.hpp
src/hydro/prolongation/: custom_ops.hpp
src/hydro/rsolvers/: glmmhd_dc_llf.hpp  glmmhd_derigs.hpp  glmmhd_hlld.hpp  glmmhd_hlle.hpp  glmmhd_lhlld.hpp  hlld.hpp  hydro_dc_llf.hpp  hydro_hllc.hpp  hydro_hlle.cpp  hydro_hlle.hpp  hydro_hlle_kji.cpp  hydro_lhllc.hpp  riemann.hpp  rsolvers.hpp
src/hydro/srcterms/: geometric_srcterm.hpp  gravitational_field.hpp  tabular_cooling.cpp  tabular_cooling.hpp  tabular_cooling_working.cpp
src/hydro/srcterms/old/: tabular_cooling_edit.cpp  tabular_cooling_edit.hpp
src/outputs/: per_block.cpp
src/pgen/: CMakeLists.txt  SN.cpp  SN2.cpp  advection.cpp  blast.cpp  burn_in_tube.cpp  cloud.cpp  cloud_original.cpp  cluster.cpp  cluster_working.cpp  cpaw.cpp  diffusion.cpp  disk.cpp  field_loop.cpp  kh.cpp  linear_wave.cpp  linear_wave_mhd.cpp  lw_implode.cpp  orszag_tang.cpp  pgen.hpp  precipitator.cpp  rand_blast.cpp  rt.cpp  sod.cpp  turbulence.cpp  turbulence_sphere.cpp  visc.cpp
src/pgen/cluster/: JetCoordsMath.ipynb  agn_feedback.cpp  agn_feedback.hpp  agn_triggering.cpp  agn_triggering.hpp  bh_coords.hpp  cluster_clips.cpp  cluster_clips.hpp  cluster_gravity.hpp  cluster_gravity_original.hpp  cluster_gravity_working.hpp  cluster_reductions.cpp  cluster_reductions.hpp  cluster_utils.hpp  entropy_isothermal_profiles.hpp  entropy_profiles.hpp  hydro_agn_feedback.cpp  hydro_agn_feedback.hpp  hydrostatic_equilibrium_sphere.cpp  hydrostatic_equilibrium_sphere.hpp  hydrostatic_equilibrium_sphere_impl.hpp  isothermal_sphere.cpp  isothermal_sphere.hpp  jet_coords.hpp  magnetic_tower.cpp  magnetic_tower.hpp  perturbations.hpp  snia_feedback.cpp  snia_feedback.hpp  stellar_feedback.cpp  stellar_feedback.hpp
src/pgen/old_cluster/: cluster_16nov.cpp  cluster_22nov.cpp  cluster_divartifact.cpp  cluster_modified.cpp  cluster_temp.cpp  cluster_working.cpp
src/recon/: dc.cpp  dc_simple.hpp  limo3_simple.hpp  plm.cpp  plm_simple.hpp  ppm_simple.hpp  ppm_simple2.hpp  recon.hpp  weno3_simple.hpp  wenoz_simple.hpp
src/refinement/: gradient.cpp  other.cpp  refinement.hpp
src/tracers/: tracers.cpp  tracers.hpp
src/utils/: few_modes_ft.cpp  few_modes_ft.hpp  few_modes_ft_lognormal.cpp  few_modes_ft_lognormal.hpp  interpolation.hpp  robust.hpp
tst/regression/: CMakeLists.txt  linearwave-errors.dat.ref
tst/regression/test_suites/aniso_therm_cond_gauss_conv/: aniso_therm_cond_gauss_conv.py
tst/regression/test_suites/aniso_therm_cond_ring_conv/: README.md  aniso_therm_cond_ring_conv.py
tst/regression/test_suites/aniso_therm_cond_ring_multid/: README.md  aniso_therm_cond_ring_multid.py
tst/regression/test_suites/aniso_therm_cond_step/: aniso_therm_cond_step.py
tst/regression/test_suites/cluster_agn_triggering/: cluster_agn_triggering.py
tst/regression/test_suites/cluster_hse/: cluster_hse.py
tst/regression/test_suites/cluster_hydro_agn_feedback/: cluster_hydro_agn_feedback.py
tst/regression/test_suites/cluster_magnetic_tower/: cluster_magnetic_tower.py
tst/regression/test_suites/cluster_tabular_cooling/: cluster_tabular_cooling.py
tst/regression/test_suites/convergence/: convergence.py
tst/unit/: CMakeLists.txt  tests.cpp
(+10 files in other folders)
